重构：收口文件引用并清理冗余表